--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	<div id="map_france" class="step" data-x="4000" data-y="0" data-rotate-x="-90"
 		style="transition: opacity 1s ease 0.5s;">
 		<p>C'est là :</p>
-		<img src="map france.jpg"/>
+		<img src="map_france.jpg"/>
 	</div>
 	
 	<div id="map_aveyron" class="step" data-x="4041" data-y="0" data-z="-195" data-rotate-x="-90" data-scale="0.125" 
@@ -130,7 +130,7 @@
 		<div class="star" style="top:276px; left:245px"><span style="background-color:white">Capdenac-le-haut</span></div>
 		<!-- <div class="star" style="top:362px; left:326px"><span style="background-color:white">Rignac</span></div> -->
 		<div class="star" style="top:328px; left:302px"><span style="background-color:white">Montbazens</span></div>
-		<img style="box-shadow:none;" src="map aveyron.png"/>
+		<img style="box-shadow:none;" src="map_aveyron.png"/>
 	</div>
 	
 <!-- 	<div id="rignac" class="step hidden" data-x="4027" data-y="0" data-z="-195" data-rotate-x="-90" data-scale="0.025">
