--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		if (Cookies.get('visited') != undefined)
 		{
 			// inserer page de "menu"
+			$("#menu").css("display", "block");
 			$("#impress").prepend($("#menu"));
 		}
 	    
@@ -55,7 +56,7 @@
 
 <body class="impress-not-supported">
 
-<div id="menu" class='step hidden' data-x='-1000' data-y='0'>
+<div id="menu" class='step hidden' style="display:none" data-x='-1000' data-y='0'>
 	<p style="font-size:larger"><b>Déjà venus ici?</b></p>
 
 	<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
