fix heure mairie

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="menu" class='step hidden' style="display:none" data-x='-1000' data-y='0'>
 	<p style="font-size:larger"><b>Déjà venus ici?</b></p>
 
-	<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
+	<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h30</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
 	<br/>
 	<p>Puis à la salle des fêtes de <br/><b>Capdenac-le-haut</b> pour la fiesta,<br/> à partir de 18h.</p>
 </div>
