hackuza: fixed hint going all over the text
what will my children say

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     Just sayin' ;)
     
 -->
-<div class="hint">
+<div class="hint" id="hint">
     <p>Utilisez la flêche <i class="fa fa-arrow-right"></i> du clavier pour continuer</p>
 </div>
 <script>
