minor changes in texts

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h30</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
 	<br/>
-	<p>Puis à la salle des fêtes de <br/><b>Capdenac-le-haut</b> pour la fiesta,<br/> à partir de 18h.</p>
+	<p>Puis à la salle des fêtes de <br/><b>Capdenac-le-haut</b> pour la cérémonie d'engagement qui sera suivie d'un cocktail à 18h et d'un dîner à 20h</p>
 </div>
 
 <!--
@@ -115,9 +115,9 @@
 	</div>
 	
 	<div id="mairie" class="step hidden" data-x="4000" data-y="0">
-		<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
+		<p>Alors rendez-vous le <b>27 août 2016</b>,<br/>à <b>	15h30</b> à la <b>mairie de Montbazens</b>,<br/> en Aveyron !</p>
 		<br/>
-		<p>Puis à la salle des fêtes de <br/><b>Capdenac-le-haut</b> pour la fiesta,<br/> à partir de 18h.</p>
+		<p>Puis à la salle des fêtes de <br/><b>Capdenac-le-haut</b> pour la cérémonie d'engagement qui sera suivie d'un cocktail à 18h et d'un dîner à 20h</p>
 	</div>
 	
 	<div id="map_france" class="step" data-x="4000" data-y="0" data-rotate-x="-90"
@@ -151,12 +151,12 @@
 		<p>Puis direction Capdenac-le-haut pour les festivités.</p>
 		<img src="capdenac_le_haut.jpg"/>
 		<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sfr!4v1444569907878!6m8!1m7!1sgB8ldqMCd8Yvz629jqxwJg!2m2!1d44.58089755281306!2d2.069139435485409!3f77.83805622429928!4f-1.2081955930729293!5f0.7820865974627469" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
-		<p>Un vin d'honneur et un diner.</p>
+		
 	
 	</div>
 	
 	<div id="avtdernier" class="step hidden" data-x="4018" data-y="1000">
-		<p>Ca vous tente ? <sup>*</sup></p>
+		<p>Ça vous tente ? <sup>*</sup></p>
 		<p><span class="footnote" style="text-align:center">* et en plus vous êtes invités</span></p>
 	</div>
 
